# dig-rs

./: .gitignore  Cargo.toml  README.md  dig.md
.github/workflows/: release.yml
models/: max.essence  rel.essence
results/: closed.dot  closed.json  closed.tex  max.dot  max.json  max.tex  rel.dot  rel.json  rel.tex  rel_bdd.dot  rel_bdd.json
src/: main.rs  parse.rs  solve.rs
