[package]
name = "dig-rs"
version = "0.2.0"
authors = ["Gokberk Kocak <gk34@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolean_expression = "0.4"
regex = "1.4"
lazy_static = "1.4"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"